--- a/MainApp/Customs/home.html
+++ b/MainApp/Customs/home.html
@@ -21,39 +21,48 @@
 </head>
 
 <body>
-    <section class="h-100 pop-up gradient-form">
-        <div class="card rounded-3 pop-up">
-            <div class="card-body popup-div rounded-start text-center p-md-5" id="info-section">
-                <img src="https://plm.edu.ph/images/Seal/PLM_Seal_BOR-approved_2014.png" alt="PLM logo"
-                        style="height: 120px; width:auto;">
-                <h3 class="card-title mt-3">From the Javawockeez Team</h3>
+    <section class="h-100 gradient-form justify-content-center">
+        <div class="card rounded-5 pop-up">
+            <div class="card-body popup-div rounded-start text-center p-md-5 align-items-center" id="info-section">
+                <h3 class="card-title mb-5">From the Javawockeez Team</h3>
                 <p class="card-text"><small>This is simply a dummy text of the printing and typesetting industry.
                         Lorem Ipsum has been industry's standard dummy text ever since the 1500s,
                         when an unknown printer took a galley of type and scrambled it to make a
                         type specimen book.</small></p>
             </div>
-            <div class="card-body popup-div rounded-end p-md-5 mx-md-4" id="form-section">
-                <h2 class="card-title text-center">Let's get started!</h2>
+            <div class="card-body popup-div rounded-end p-md-5" id="form-section">
+                <div class="text-center">
+                    <img src="https://plm.edu.ph/images/Seal/PLM_Seal_BOR-approved_2014.png" alt="PLM logo"
+                        style="height: 120px; width:auto;" class="mb-2">
+                    <h2 class="card-title">Let's get started!</h2>
+                </div>
                 <p class="mt-5">Please log in to your account</p>
                 <form action="" method="">
-                    <div class="form-outline mb-4">
-                        <input type="text" id="school-name" class="form-control form-control-lg " name="school-name"
-                            required placeholder="e.g. PAMANTASAN NG LUNGSOD NG MAYNILA" />
-                        <label class="form-label" for="school-name">Complete School Name</label>
+                    <div class="input-group my-4">
+                        <span class="input-group-text border-0"><i class="fas fa-landmark"></i></span>
+                        <div class="form-outline">
+                            <input type="text" id="school-name" class="form-control form-control-lg" name="school-name"
+                                required placeholder="e.g. PAMANTASAN NG LUNGSOD NG MAYNILA" />
+
+                            <label class="form-label" for="school-name">Complete School Name</label>
+                        </div>
                     </div>
-                    <div class="form-outline mb-4">
-                        <input type="password" id="school-name" class="form-control form-control-lg" name="school-name"
-                            required />
-                        <label class="form-label" for="password">Password</label>
+                    <div class="input-group mb-4">
+                        <span class="input-group-text border-0"><i class="fas fa-lock"></i></span>
+                        <div class="form-outline mb-">
+                            <input type="password" id="school-name" class="form-control form-control-lg"
+                                name="school-name" required />
+                            <label class="form-label" for="password">Password</label>
+                        </div>
                     </div>
                     <div class="text-center pt-1 mb-5 pb-1">
-                        <button class="btn btn-primary btn-block btn-lg mb-3" type="submit">Log
+                        <button class="btn btn-primary btn-block rounded-pill btn-lg mb-3" type="submit">Log
                             in</button>
                         <a class="text-muted" href="#!"><small>Forgot password?</small></a>
                     </div>
                     <div class="d-flex align-items-center pb-4 justify-content-between">
                         <p class="mb-0 me-2">Don't have an account?</p>
-                        <button type="submit" class="btn btn-outline-primary btn-flex">Create new</button>
+                        <a role="button" class="btn btn-outline-primary btn-flex" href="#somewhere">Create new</a>
                     </div>
                 </form>
             </div>
