--- a/MainApp/Customs/home.html
+++ b/MainApp/Customs/home.html
@@ -8,61 +8,65 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, height=device-height'>
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@400;700&display=swap">
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@400;700&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
-    <section class="h-100 gradient-form justify-content-center">
-        <div class="card rounded-5 pop-up">
-            <div class="card-body popup-div rounded-start text-center p-md-5 align-items-center" id="info-section">
+    <section class="gradient-form">
+        <div class="card pop-up">
+            <div class="card-body p-md-5" id="info-section">
                 <h3 class="card-title mb-5">From the Javawockeez Team</h3>
-                <p class="card-text"><small>This is simply a dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a
-                        type specimen book.</small></p>
+                <p class="card-text">
+                    This is simply a dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a
+                    type specimen book. Wabalabadubdub.. boop!
+                </p>
             </div>
-            <div class="card-body popup-div rounded-end p-md-5" id="form-section">
+            <div class="card-body p-md-5" id="form-section">
                 <div class="text-center">
                     <img src="https://plm.edu.ph/images/Seal/PLM_Seal_BOR-approved_2014.png" alt="PLM logo"
-                        style="height: 120px; width:auto;" class="mb-2">
+                        style="height: 110px; width:auto;" class="mb-2">
                     <h2 class="card-title">Let's get started!</h2>
                 </div>
                 <p class="mt-5">Please log in to your account</p>
-                <form action="" method="">
+
+                <form action="post" method="#authenticate-credentials!">
                     <div class="input-group my-4">
-                        <span class="input-group-text border-0"><i class="fas fa-landmark"></i></span>
+                        <span class="input-group-text border-0"><i class="fas fa-landmark fa-lg"></i></span>
                         <div class="form-outline">
                             <input type="text" id="school-name" class="form-control form-control-lg" name="school-name"
-                                required placeholder="e.g. PAMANTASAN NG LUNGSOD NG MAYNILA" />
+                                required placeholder="e.g. PAMANTASAN NG LUNGSOD NG MAYNILA" value="" />
 
                             <label class="form-label" for="school-name">Complete School Name</label>
                         </div>
                     </div>
                     <div class="input-group mb-4">
-                        <span class="input-group-text border-0"><i class="fas fa-lock"></i></span>
-                        <div class="form-outline mb-">
+                        <span class="input-group-text border-0"><i class="fas fa-lock fa-lg mr-2"></i></span>
+                        <div class="form-outline">
                             <input type="password" id="school-name" class="form-control form-control-lg"
-                                name="school-name" required />
+                                name="school-name" required value="" />
                             <label class="form-label" for="password">Password</label>
                         </div>
                     </div>
-                    <div class="text-center pt-1 mb-5 pb-1">
+                    <div class="text-center py-1 mb-5">
                         <button class="btn btn-primary btn-block rounded-pill btn-lg mb-3" type="submit">Log
                             in</button>
                         <a class="text-muted" href="#!"><small>Forgot password?</small></a>
                     </div>
                     <div class="d-flex align-items-center pb-4 justify-content-between">
                         <p class="mb-0 me-2">Don't have an account?</p>
-                        <a role="button" class="btn btn-outline-primary btn-flex" href="#somewhere">Create new</a>
+                        <a role="button" class="btn btn-outline-primary btn-flex" href="#sign-up-page!">Create new</a>
                     </div>
                 </form>
             </div>
