Added temporary* custom logo and tweaked some designs

--- a/MainApp/Customs/home.html
+++ b/MainApp/Customs/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Class Scheduling System</title>
     <meta name='viewport' content='width=device-width, initial-scale=1, height=device-height'>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- MDB -->
@@ -35,7 +36,7 @@
             </div>
             <div class="card-body p-md-5" id="form-section">
                 <div class="text-center">
-                    <img src="https://plm.edu.ph/images/Seal/PLM_Seal_BOR-approved_2014.png" alt="PLM logo"
+                    <img src="images/css-logo.png" alt="PLM logo"
                         style="height: 110px; width:auto;" class="mb-2">
                     <h2 class="card-title">Let's get started!</h2>
                 </div>
@@ -60,7 +61,7 @@
                         </div>
                     </div>
                     <div class="text-center py-1 mb-5">
-                        <button class="btn btn-primary btn-block rounded-pill btn-lg mb-3" type="submit">Log
+                        <button class="btn btn-primary btn-block rounded-pill btn-lg mb-3" type="submit" id="login">Log
                             in</button>
                         <a class="text-muted" href="#!"><small>Forgot password?</small></a>
                     </div>
